@@ -2,12 +2,12 @@ Same-site Cookies
 =================
 
 The `Same-site cookie RFC
-<https://tools.ietf.org/html/draft-west-first-party-cookies-07>`_  updates
+<https://tools.ietf.org/html/draft-west-first-party-cookies-07>`_ updates
 `RFC6265 <https://tools.ietf.org/html/rfc6265>`_ to include a new cookie
 attribute named ``SameSite``.
 
-WebOb provides support for setting the ``SameSite`` attribute in it's cookie
-API's, using the ``samesite`` keyword argument.
+WebOb provides support for setting the ``SameSite`` attribute in its cookie
+APIs, using the ``samesite`` keyword argument.
 
 Please refer to the API documentation for :func:`webob.cookies.make_cookie`
 and :class:`webob.cookies.CookieProfile` for the keyword arguments.
